--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -29,12 +29,18 @@ items:
     href: quickstart-create-user.md
   - name: Csoport létrehozása
     href: quickstart-create-group.md
-  - name: Házirend létrehozása
-    href: quickstart-create-policy.md
-  - name: Hossz megadása az eszközök jelszavainál
-    href: quickstart-set-password-length-android.md
   - name: Automatikus regisztráció beállítása
     href: quickstart-setup-auto-enrollment.md
+  - name: Windows 10 rendszerű eszköz regisztrálása
+    href: quickstart-enroll-windows-device.md
+  - name: Eszközmegfelelőségi szabályzat létrehozása
+    href: quickstart-set-password-length-android.md
+  - name: Értesítések küldése a nem megfelelő eszközökre
+    href: quickstart-send-notification.md
+  - name: Alkalmazás hozzáadása és hozzárendelése
+    href: quickstart-add-assign-app.md
+  - name: Alkalmazásvédelmi szabályzat létrehozása és hozzárendelése
+    href: quickstart-create-assign-app-policy.md
   - name: Egyéni szerepkör létrehozása és hozzárendelése
     href: quickstart-create-custom-role.md
   - name: E-mail-eszközprofil létrehozása
@@ -156,7 +162,7 @@ items:
     - name: Regisztrációs beállítások
       href: enrollment-options.md
       items:
-      - name: használati feltételei
+      - name: Használati feltételek
         href: terms-and-conditions-create.md
       - name: Korlátozások
         href: enrollment-restrictions-set.md
@@ -166,7 +172,7 @@ items:
         href: corporate-identifiers-add.md
       - name: Többtényezős hitelesítés
         href: multi-factor-authentication.md
-      - name: Készülékregisztráció-kezelő
+      - name: Eszközregisztráció-kezelő
         href: device-enrollment-manager-enroll.md
       - name: Eszközök hozzárendelése csoportokhoz
         href: device-group-mapping.md
@@ -557,7 +563,7 @@ items:
     - name: Adatvédelem és személyes adatok
       href: privacy-personal-data.md
       items:
-      - name: Adatgyűjtés
+      - name: 'Adatgyűjtés '
         href: privacy-data-collect.md
       - name: Adattárolás és -feldolgozás
         href: privacy-data-store-process.md
@@ -839,9 +845,9 @@ items:
         href: resolve-gpo-and-microsoft-intune-policy-conflicts.md
   - name: Szószedet
     href: intune-glossary.md
-ms.openlocfilehash: 58768bc109a5c0e079779959a7d176565582a138
-ms.sourcegitcommit: 222881461a81a93b3843c2ac86a7c24a180158d5
+ms.openlocfilehash: c7f77f5acb94a3e137313a136807c70bdb085136
+ms.sourcegitcommit: 4c4e87cb0d8906085fcb7cdd170bd6b0cfeb23ff
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 11/03/2018
-ms.locfileid: "50971431"
+ms.lasthandoff: 11/10/2018
+ms.locfileid: "51511060"
