--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -162,7 +162,7 @@ items:
     - name: Regisztrációs beállítások
       href: enrollment-options.md
       items:
-      - name: Használati feltételek
+      - name: használati feltételei
         href: terms-and-conditions-create.md
       - name: Korlátozások
         href: enrollment-restrictions-set.md
@@ -172,7 +172,7 @@ items:
         href: corporate-identifiers-add.md
       - name: Többtényezős hitelesítés
         href: multi-factor-authentication.md
-      - name: Eszközregisztráció-kezelő
+      - name: Készülékregisztráció-kezelő
         href: device-enrollment-manager-enroll.md
       - name: Eszközök hozzárendelése csoportokhoz
         href: device-group-mapping.md
@@ -216,7 +216,7 @@ items:
     - name: macOS-regisztráció beállítása
       href: macos-enroll.md
       items:
-      - name: Készülékregisztrációs program
+      - name: Készülékregisztrációs program vagy Apple School Manager
         href: device-enrollment-program-enroll-macos.md
     - name: Az Intune-szoftverügyfél telepítése Windows rendszerű számítógépekre
       href: install-the-windows-pc-client-with-microsoft-intune.md
@@ -414,6 +414,8 @@ items:
         href: device-restrictions-windows-10-teams.md
       - name: Windows Holographic for Business
         href: device-restrictions-windows-holographic.md
+    - name: Teljesítésoptimalizálás
+      href: delivery-optimization-windows.md
     - name: Az Endpoint Protection konfigurálása
       href: endpoint-protection-configure.md
       items:
@@ -423,10 +425,6 @@ items:
         href: endpoint-protection-windows-10.md
     - name: Az Identity Protection konfigurálása
       href: identity-protection-configure.md
-    - name: Androidos kioszkbeállítások
-      href: android-kiosk-settings.md
-    - name: Vállalati androidos kioszkbeállítások
-      href: android-enterprise-settings.md
     - name: Windows 10-es kioszkbeállítások
       href: kiosk-settings.md
     - name: E-mail-beállítások konfigurálása
@@ -563,7 +561,7 @@ items:
     - name: Adatvédelem és személyes adatok
       href: privacy-personal-data.md
       items:
-      - name: 'Adatgyűjtés '
+      - name: Adatgyűjtés
         href: privacy-data-collect.md
       - name: Adattárolás és -feldolgozás
         href: privacy-data-store-process.md
@@ -845,9 +843,9 @@ items:
         href: resolve-gpo-and-microsoft-intune-policy-conflicts.md
   - name: Szószedet
     href: intune-glossary.md
-ms.openlocfilehash: c7f77f5acb94a3e137313a136807c70bdb085136
-ms.sourcegitcommit: 4c4e87cb0d8906085fcb7cdd170bd6b0cfeb23ff
+ms.openlocfilehash: a3712961f5980cb9aa40efd57fe324d2c349c377
+ms.sourcegitcommit: ecd6aebe50b1440a282dfdda771e37fbb8750d42
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 11/10/2018
-ms.locfileid: "51511060"
+ms.lasthandoff: 12/01/2018
+ms.locfileid: "52728735"
