--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -1,8 +1,9 @@
 items:
+- name: Microsoft Intune-dokumentáció
+  href: index.yml
 - name: Áttekintés
-  href: introduction-intune.md
   items:
-  - name: Mi az az Azure Portal?
+  - name: Mi az az Intune?
     href: what-is-intune.md
   - name: Mi az az Intune for Education?
     href: introduction-intune-education.md
@@ -61,8 +62,6 @@ items:
     href: data-outside-protect.md
   - name: Adatszivárgás megakadályozása nem felügyelt eszközökön
     href: data-leak-prevention.md
-  - name: Az MDM és az MAM összehasonlítása
-    href: byod-technology-decisions.md
 - name: Fogalmak
   items:
   - name: Mi az eszközkezelés?
@@ -71,17 +70,14 @@ items:
     href: get-started-azure.md
   - name: Magas szintű architektúra
     href: high-level-architecture.md
-  - name: Eszközök és alkalmazások életciklusa
-    href: introduction-device-app-lifecycles.md
-    items:
-    - name: Eszközök életciklusa
-      href: device-lifecycle.md
-    - name: Alkalmazások életciklusa
-      href: app-lifecycle.md
+  - name: Eszközök életciklusa
+    href: device-lifecycle.md
+  - name: Alkalmazások életciklusa
+    href: app-lifecycle.md
   - name: Gyakori helyzetek
     href: common-scenarios.md
-  - name: MAM – GYAKORI KÉRDÉSEK
-    href: mam-faq.md
+  - name: Az MDM és az MAM összehasonlítása
+    href: byod-technology-decisions.md
   - name: Szabályzat és profil – gyakori kérdések
     href: manage-settings-and-features-on-your-devices-with-microsoft-intune-policies.md
 - name: Telepítési terv kidolgozása
@@ -345,6 +341,8 @@ items:
         href: app-configuration-policies-outlook.md
     - name: Alkalmazások védelme
       items:
+      - name: MAM – GYAKORI KÉRDÉSEK
+        href: mam-faq.md
       - name: Alkalmazások szelektív törlése
         href: apps-selective-wipe.md
       - name: Alkalmazásvédelmi szabályzatok használata
@@ -766,8 +764,6 @@ items:
       href: https://developer.microsoft.com/en-us/graph/docs/api-reference/beta/resources/intune_graph_overview
 - name: Erőforrások
   items:
-  - name: A Microsoft Intune-dokumentáció útmutatója
-    href: intune-documentation.md
   - name: Hibaelhárítás
     items:
     - name: Segítség a felhasználóknak a problémák elhárításában
@@ -843,9 +839,9 @@ items:
         href: resolve-gpo-and-microsoft-intune-policy-conflicts.md
   - name: Szószedet
     href: intune-glossary.md
-ms.openlocfilehash: a3712961f5980cb9aa40efd57fe324d2c349c377
-ms.sourcegitcommit: ecd6aebe50b1440a282dfdda771e37fbb8750d42
+ms.openlocfilehash: 79f28c5570d62e3ef973c6db913222c4cd88fdec
+ms.sourcegitcommit: 580eb4920d18ce09c9431d9d0dfee9d195459c0e
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 12/01/2018
-ms.locfileid: "52728735"
+ms.lasthandoff: 12/05/2018
+ms.locfileid: "52887083"
