--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -50,6 +50,8 @@ items:
   items:
   - name: E-mailek védelme a felügyelt eszközökön
     href: tutorial-protect-email-on-enrolled-devices.md
+  - name: E-mailek védelme a nem felügyelt eszközökön
+    href: tutorial-protect-email-on-unmanaged-devices.md
   - name: Windows-eszközök regisztrálása Autopilottal
     href: tutorial-use-autopilot-enroll-devices.md
 - name: Forgatókönyvek végrehajtási útmutatói
@@ -837,9 +839,9 @@ items:
         href: manage-license-agreements-for-windows-pc-software-in-microsoft-intune.md
       - name: Szabályzatütközések feloldása
         href: resolve-gpo-and-microsoft-intune-policy-conflicts.md
-ms.openlocfilehash: 494f4c0ada3b730251c2d7b7ece09c68558fb22e
-ms.sourcegitcommit: 88f760abcea7348a0c6d00b533b54a6ff68d3985
+ms.openlocfilehash: 73ed5975edd4ac8312e9b23eefec471ebf005dd9
+ms.sourcegitcommit: 8019bdd8117806c6a3a73a8c6d40af1a3def6d90
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 12/06/2018
-ms.locfileid: "52977388"
+ms.lasthandoff: 12/11/2018
+ms.locfileid: "53247220"
