--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -541,6 +541,8 @@ items:
       href: exchange-connector-install.md
     - name: Feltételes hozzáférési szabályzat létrehozása és hozzárendelése
       href: conditional-access-exchange-create.md
+    - name: Eszközalapú feltételes hozzáférési szabályzat
+      href: create-conditional-access-intune.md
     - name: Feltételes hozzáférési szabályzatok ismételt hozzárendelése az Intune klasszikus portáljáról
       href: conditional-access-intune-reassign.md
     - name: Alkalmazásalapú feltételes hozzáférés
@@ -839,9 +841,9 @@ items:
         href: manage-license-agreements-for-windows-pc-software-in-microsoft-intune.md
       - name: Szabályzatütközések feloldása
         href: resolve-gpo-and-microsoft-intune-policy-conflicts.md
-ms.openlocfilehash: 73ed5975edd4ac8312e9b23eefec471ebf005dd9
-ms.sourcegitcommit: 8019bdd8117806c6a3a73a8c6d40af1a3def6d90
+ms.openlocfilehash: ada41d711516760e9d928c78968b0a24d719d783
+ms.sourcegitcommit: 874d9a00cc4666920069d54f99c6c2e687fa34a6
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 12/11/2018
-ms.locfileid: "53247220"
+ms.lasthandoff: 12/13/2018
+ms.locfileid: "53325054"
