--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -374,9 +374,11 @@ items:
   - name: Eszközök konfigurálása
     href: device-profiles.md
     items:
-    - name: Eszközprofilok konfigurálása
+    - name: Eszközprofilok
       href: device-profile-create.md
-    - name: Eszközfunkciók konfigurálása
+    - name: Felügyeleti sablonok
+      href: administrative-templates-windows.md
+    - name: Eszközfunkciók iOS-hez és macOS-hez
       href: device-features-configure.md
       items:
       - name: AirPrint iOS és MacOS rendszerekre
@@ -387,13 +389,13 @@ items:
         href: home-screen-settings-ios.md
       - name: Alkalmazásértesítések iOS-hez
         href: app-notification-settings-ios.md
-      - name: Megosztott eszközök iOS-hez
+      - name: Képernyőzárolási üzenet iOS-hez
         href: shared-device-settings-ios.md
       - name: Az Intune konfigurálása egyszeri bejelentkezéshez iOS-es eszközökön
         href: sso-ios.md
       - name: Webszűrő-beállítások iOS-hez
         href: web-content-filter-settings-ios.md
-    - name: Eszközkorlátozások beállítása
+    - name: Eszközkorlátozások
       href: device-restrictions-configure.md
       items:
       - name: Android
@@ -416,18 +418,18 @@ items:
         href: device-restrictions-windows-holographic.md
     - name: Teljesítésoptimalizálás
       href: delivery-optimization-windows.md
-    - name: Az Endpoint Protection konfigurálása
+    - name: Endpoint Protection
       href: endpoint-protection-configure.md
       items:
       - name: macOS
         href: endpoint-protection-macos.md
       - name: Windows 10
         href: endpoint-protection-windows-10.md
-    - name: Az Identity Protection konfigurálása
+    - name: Identity protection
       href: identity-protection-configure.md
     - name: Windows 10-es kioszkbeállítások
       href: kiosk-settings.md
-    - name: E-mail-beállítások konfigurálása
+    - name: E-mail beállítások
       href: email-settings-configure.md
       items:
       - name: Android
@@ -438,7 +440,7 @@ items:
         href: email-settings-windows-phone-8-1.md
       - name: Windows 10
         href: email-settings-windows-10.md
-    - name: VPN-beállítások konfigurálása
+    - name: VPN-beállítások
       href: vpn-settings-configure.md
       items:
       - name: Android
@@ -455,7 +457,7 @@ items:
         href: vpn-settings-windows-phone-8-1.md
       - name: Windows 10
         href: vpn-settings-windows-10.md
-    - name: Wi-Fi-beállítások konfigurálása
+    - name: Wi-Fi-beállítások
       href: wi-fi-settings-configure.md
       items:
       - name: Android
@@ -470,7 +472,7 @@ items:
         href: wi-fi-settings-windows.md
       - name: Windows 8.1
         href: wi-fi-settings-import-windows-8-1.md
-    - name: eSIM mobilprofilok konfigurálása
+    - name: eSIM mobilprofilok
       href: esim-device-configuration.md
     - name: Oktatás
       items:
@@ -478,11 +480,11 @@ items:
         href: education-settings-configure-ios-shared.md
       - name: Windows 10
         href: education-settings-configure.md
-    - name: A Windows 10-kiadás frissítési beállításainak konfigurálása
+    - name: A Windows 10 kiadásfrissítési beállításai
       href: edition-upgrade-configure-windows-10.md
-    - name: iOS-frissítési szabályzatok konfigurálása
+    - name: iOS-es frissítési szabályzatok
       href: software-updates-ios.md
-    - name: Tanúsítványok konfigurálása
+    - name: Tanúsítványok
       href: certificates-configure.md
       items:
       - name: SCEP
@@ -491,14 +493,21 @@ items:
         href: certficates-pfx-configure.md
       - name: E-mailek titkosítása S/MIME protokollal
         href: certificates-s-mime-encryption-sign.md
-      - name: Külső hitelesítésszolgáltató használata SCEP-pel
+      - name: Külső hitelesítésszolgáltatók SCEP használatával
         href: certificate-authority-add-scep-overview.md
       - name: Symantec PKI Manager webszolgáltatás
         href: certificates-symantec-configure.md
       - name: SCEP- vagy PKCS-tanúsítványok eltávolítása
         href: remove-certificates.md
-    - name: A Windows Information Protection beállításainak konfigurálása
+    - name: A Windows Information Protection beállításai
       href: windows-information-protection-configure.md
+    - name: Többfelhasználós megosztott eszközök
+      href: shared-user-device-settings.md
+      items:
+      - name: Windows 10
+        href: shared-user-device-settings-windows.md
+      - name: Windows Holographic for Business
+        href: shared-user-device-settings-windows-holographic.md
     - name: PowerShell-parancsprogramok kezelése
       href: intune-management-extension.md
     - name: Távközlési költségek monitorozása
@@ -512,17 +521,17 @@ items:
   - name: Eszközmegfelelőség beállítása
     href: device-compliance-get-started.md
     items:
-    - name: Android-szabályzat létrehozása
+    - name: Android-szabályzat
       href: compliance-policy-create-android.md
-    - name: Android Enterprise-profilszabályzat létrehozása
+    - name: Android Enterprise-profilszabályzat
       href: compliance-policy-create-android-for-work.md
-    - name: Szabályzat létrehozása a Google Play Protect-támogatáshoz
+    - name: A Google Play Protect engedélyezése
       href: compliance-policy-create-google-play-protect.md
-    - name: iOS-szabályzat létrehozása
+    - name: IOS-szabályzat
       href: compliance-policy-create-ios.md
-    - name: macOS-szabályzat létrehozása
+    - name: macOS-szabályzat
       href: compliance-policy-create-mac-os.md
-    - name: Windows-szabályzat létrehozása
+    - name: Windows-szabályzat
       href: compliance-policy-create-windows.md
     - name: Helyalapú házirend
       href: use-network-locations.md
@@ -693,6 +702,10 @@ items:
         href: custom-settings-windows-holographic.md
       - name: Windows Phone 8.1
         href: custom-settings-windows-phone-8-1.md
+- name: Súgó és támogatás
+  items:
+  - name: Bérlő állapota
+    href: tenant-status.md
 - name: Fejlesztői útmutatás
   items:
   - name: Külső hitelesítésszolgáltató hozzáadása API-val
@@ -841,9 +854,9 @@ items:
         href: manage-license-agreements-for-windows-pc-software-in-microsoft-intune.md
       - name: Szabályzatütközések feloldása
         href: resolve-gpo-and-microsoft-intune-policy-conflicts.md
-ms.openlocfilehash: ada41d711516760e9d928c78968b0a24d719d783
-ms.sourcegitcommit: 874d9a00cc4666920069d54f99c6c2e687fa34a6
+ms.openlocfilehash: 1f17ae67e609e9836c29f6afd810bbea5ece99b4
+ms.sourcegitcommit: 4a7421470569ce4efe848633bd36d5946f44fc8d
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 12/13/2018
-ms.locfileid: "53325054"
+ms.lasthandoff: 01/10/2019
+ms.locfileid: "54203586"
