commit translated contents

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -583,12 +583,12 @@ items:
           href: data-apple-sends-to-intune.md
         - name: A Google által az Intune-nak küldött adatok
           href: data-google-sends-to-intune.md
+        - name: A Jamf Pro által az Intune-ba küldött adatok
+          href: data-jamf-sends-to-intune.md
         - name: Az Intune által az Apple-nek küldött adatok
           href: data-intune-sends-to-apple.md
         - name: Az Intune által a Google-nek küldött adatok
           href: data-intune-sends-to-google.md
-        - name: A Jamf Pro információmegosztása az Intune-nal
-          href: conditional-access-integrate-jamf.md
       - name: Személyes adatok megtekintése és javítása
         href: privacy-data-view-correct.md
       - name: Naplózás, exportálás, törlés
@@ -854,9 +854,9 @@ items:
         href: manage-license-agreements-for-windows-pc-software-in-microsoft-intune.md
       - name: Szabályzatütközések feloldása
         href: resolve-gpo-and-microsoft-intune-policy-conflicts.md
-ms.openlocfilehash: 1f17ae67e609e9836c29f6afd810bbea5ece99b4
-ms.sourcegitcommit: 4a7421470569ce4efe848633bd36d5946f44fc8d
+ms.openlocfilehash: 2939459eafe7771c33ec20fd150c36c7808c2b1c
+ms.sourcegitcommit: 7c41f42d6e398ed46aa602ec8aaa4f39aaf92772
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 01/10/2019
-ms.locfileid: "54203586"
+ms.lasthandoff: 01/16/2019
+ms.locfileid: "54325049"
