commit translated contents

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -196,8 +196,12 @@ items:
         href: connect-intune-android-enterprise.md
       - name: Az Android beállítása munkahelyi profillal történő regisztráláshoz
         href: android-work-profile-enroll.md
-      - name: Az Android beállítása kioszk módú regisztráláshoz
+      - name: Dedikált Androidos eszközök regisztrálásának beállítása
         href: android-kiosk-enroll.md
+      - name: Teljes mértékben felügyelt androidos regisztráció beállítása
+        href: android-fully-managed-enroll.md
+      - name: Dedikált Android-eszközök vagy teljes körűen felügyelt eszközök regisztrálása
+        href: android-dedicated-devices-fully-managed-enroll.md
       - name: Androidos munkahelyi profilos eszközök kezelése
         href: android-enterprise-overview.md
       - name: Samsung Knox Mobile Enrollment
@@ -854,9 +858,9 @@ items:
         href: manage-license-agreements-for-windows-pc-software-in-microsoft-intune.md
       - name: Szabályzatütközések feloldása
         href: resolve-gpo-and-microsoft-intune-policy-conflicts.md
-ms.openlocfilehash: 2939459eafe7771c33ec20fd150c36c7808c2b1c
-ms.sourcegitcommit: 7c41f42d6e398ed46aa602ec8aaa4f39aaf92772
+ms.openlocfilehash: a227b0eecc9a32202fcb801bb48bc2507f8dede8
+ms.sourcegitcommit: 911923e9fe0eed52b1c93e400f776956835e582f
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 01/16/2019
-ms.locfileid: "54325049"
+ms.lasthandoff: 01/17/2019
+ms.locfileid: "54386988"
