commit translated contents

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -389,6 +389,11 @@ items:
             href: mtd-connector-enable.md
       - name: Windows Defender ATP
         href: advanced-threat-protection.md
+      - name: Biztonsági alapkonfigurációk
+        href: security-baselines.md
+        items:
+        - name: Az alapkonfigurációk monitorozása
+          href: security-baselines-monitor.md
       - name: Endpoint Protection
         href: endpoint-protection-configure.md
     - name: Hálózati hozzáférés-vezérlés
@@ -442,7 +447,7 @@ items:
           items:
           - name: A Céges portál alkalmazás manuális hozzáadása
             href: store-apps-company-portal-app.md
-        - name: Androidos munkahelyi profilos alkalmazások
+        - name: Felügyelt Google Play-alkalmazások
           href: apps-add-android-for-work.md
         - name: Windows 10-es Office 365-alkalmazások
           href: apps-add-office365.md
@@ -569,6 +574,8 @@ items:
         href: troubleshoot-app-install.md
       - name: Auditnaplók Intune-tevékenységekhez
         href: monitor-audit-logs.md
+      - name: Naplók figyelése az Azure Monitorral
+        href: review-logs-using-azure-monitor.md
       - name: Alkalmazásvédelmi naplók áttekintése
         href: app-protection-policy-settings-log.md
       - name: Az e-mail-profilok hibaelhárítása
@@ -938,9 +945,9 @@ items:
       href: data-outside-protect.md
     - name: Adatszivárgás megakadályozása nem felügyelt eszközökön
       href: data-leak-prevention.md
-ms.openlocfilehash: 79bff18a23b6613fbc1e2522b6fd7c6c414ffef5
-ms.sourcegitcommit: a30d4b699df4bff17ef39d6c93b2a5c5432db5ae
+ms.openlocfilehash: 70240d3c6969ffe86d3b32b14b50b390020b10b0
+ms.sourcegitcommit: 06f62ae989da6c60bac4a52ccd41b429f7367d8c
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 01/24/2019
-ms.locfileid: "54899127"
+ms.lasthandoff: 01/26/2019
+ms.locfileid: "55072490"
