commit translated contents

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -699,6 +699,10 @@ items:
           href: wi-fi-settings-macos.md
         - name: Egyéni
           href: custom-settings-macos.md
+    - name: Biztonsági alapkonfigurációk
+      items:
+      - name: A Windows biztonsági alapkonfigurációjának beállításai
+        href: security-baseline-settings-windows.md
     - name: Windows 10 és újabb
       items:
       - name: A megfelelőségi szabályzat beállításai
@@ -951,9 +955,9 @@ items:
       href: data-outside-protect.md
     - name: Adatszivárgás megakadályozása nem felügyelt eszközökön
       href: data-leak-prevention.md
-ms.openlocfilehash: 456d3f4205ca9e24c4358c97a3a2f6a33d1a421f
-ms.sourcegitcommit: 4a1ac07efd66b45c1435649bcd7215adbd84898f
+ms.openlocfilehash: cb54a7f48a96684c98ed73584adf4acc57a19f56
+ms.sourcegitcommit: dde9e1e1d15c412751a186410c2a04974ff1b102
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 02/01/2019
-ms.locfileid: "55645189"
+ms.lasthandoff: 02/04/2019
+ms.locfileid: "55690784"
