commit translated contents

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -65,6 +65,8 @@ items:
     href: common-scenarios.md
   - name: Technológiai döntések a hozott eszközök EMS általi felügyeletéhez
     href: byod-technology-decisions.md
+  - name: Alkalmazásvédelmi szabályzatok és munkahelyi profilok (Android)
+    href: android-deployment-scenarios-app-protection-work-profiles.md
   - name: Operációs rendszer verziószámainak kezelése
     href: manage-os-versions.md
   - name: A Windows Holographic kezelése
@@ -957,9 +959,9 @@ items:
       href: data-outside-protect.md
     - name: Adatszivárgás megakadályozása nem felügyelt eszközökön
       href: data-leak-prevention.md
-ms.openlocfilehash: ace0bec62318d846cdcc37330abb63b2a89fef14
-ms.sourcegitcommit: e262b0ad8df610e25eb9421b9ebc2673bcf1020e
+ms.openlocfilehash: 3b178658fad3e94d09dcd5979e155b8097753ffd
+ms.sourcegitcommit: 5708ec1d7ae50494be44ed5064f150b636188c84
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 02/11/2019
-ms.locfileid: "55986909"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "56240044"
