commit translated contents

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -229,6 +229,45 @@ items:
       href: enrollment-report-company-portal-abandon.md
     - name: Eszközök regisztrálásával kapcsolatos problémák elhárítása
       href: troubleshoot-device-enrollment-in-intune.md
+  - name: Kezelje az eszközöket
+    href: device-management.md
+    items:
+    - name: Eszközkezelési képességek
+      href: device-management-capabilities.md
+    - name: Aktiválási zár megkerülése
+      href: device-activation-lock-bypass.md
+    - name: A Windows újrakezdés műveletének kezelése
+      href: device-fresh-start.md
+    - name: Elveszett iOS-eszköz megkeresése
+      href: device-locate.md
+    - name: Az iOS-es elveszett mód engedélyezése
+      href: device-lost-mode.md
+    - name: iOS-es felügyelt mód bekapcsolása
+      href: device-supervised-mode.md
+    - name: Eszköz zárolása
+      href: device-remote-lock.md
+    - name: Jelszó alaphelyzetbe állítása
+      href: device-passcode-reset.md
+    - name: Eszköz újraindítása
+      href: device-restart.md
+    - name: Aktuális felhasználó kijelentkeztetése
+      href: device-logout-user.md
+    - name: Felhasználó eltávolítása
+      href: device-remove-user.md
+    - name: Eszköz törlése
+      href: device-erase.md
+    - name: Távolról vezérelt mobileszközök
+      href: device-profile-android-teamviewer.md
+    - name: Windows 10-es PIN-kód alaphelyzetbe állítása
+      href: device-windows-pin-reset.md
+    - name: Az Exchange szolgáltatási összekötőjének telepítése
+      href: exchange-service-connector-configure.md
+    - name: Eszköz szinkronizálása
+      href: device-sync.md
+    - name: Eszközkészlet vizsgálata
+      href: device-inventory.md
+    - name: Eszközök eltávolítása
+      href: devices-wipe.md
   - name: Eszközmegfelelőség beállítása
     items:
     - name: Megfelelőség – áttekintés
@@ -959,9 +998,9 @@ items:
       href: data-outside-protect.md
     - name: Adatszivárgás megakadályozása nem felügyelt eszközökön
       href: data-leak-prevention.md
-ms.openlocfilehash: 3b178658fad3e94d09dcd5979e155b8097753ffd
-ms.sourcegitcommit: 5708ec1d7ae50494be44ed5064f150b636188c84
+ms.openlocfilehash: 365777adf57d1f36577e2e6f20cce6b193a829f8
+ms.sourcegitcommit: 8e503c1b350f7b29a045b7daf3eece64be4ca3c4
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "56240044"
+ms.lasthandoff: 02/15/2019
+ms.locfileid: "56302200"
