commit translated contents

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -151,9 +151,11 @@ items:
     - name: Az MDM-szolgáltató beállítása
       href: mdm-authority-set.md
     - name: Szerepkörök kezelése
-      href: role-based-access-control.md
-    - name: Hatókörcímkék használata
-      href: scope-tags.md
+      items:
+      - name: Szerepköralapú hozzáférés-vezérlés
+        href: role-based-access-control.md
+      - name: Hatókörcímkék használata
+        href: scope-tags.md
   - name: Eszközök regisztrálása
     items:
     - name: Mi az eszközregisztrálás?
@@ -999,9 +1001,9 @@ items:
       href: data-outside-protect.md
     - name: Adatszivárgás megakadályozása nem felügyelt eszközökön
       href: data-leak-prevention.md
-ms.openlocfilehash: 1183db94d839619e1130261345f6988a627938bb
-ms.sourcegitcommit: e0374b3ced83c8876a4f78b326869c10588a55e5
+ms.openlocfilehash: d10d6c5a1c19430a0413e4f3149035a9e783dfc6
+ms.sourcegitcommit: f1681554ad842c22ad3f82f0e6d44d5966e4aa3d
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 02/15/2019
-ms.locfileid: "56307855"
+ms.lasthandoff: 02/21/2019
+ms.locfileid: "56458909"
