commit translated contents

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -197,17 +197,17 @@ items:
       items:
       - name: Az androidos eszközök regisztrálásának beállítása
         href: android-enroll.md
-      - name: Az Intune összekapcsolása vállalati Androiddal
+      - name: Az Intune összekapcsolása Vállalati Androiddal
         href: connect-intune-android-enterprise.md
-      - name: Az Android beállítása munkahelyi profillal történő regisztráláshoz
+      - name: Vállalati Android munkahelyi profil regisztrálása
         href: android-work-profile-enroll.md
-      - name: Dedikált Androidos eszközök regisztrálásának beállítása
+      - name: Vállalati Android dedikált eszközeinek regisztrálása
         href: android-kiosk-enroll.md
-      - name: Teljes mértékben felügyelt androidos regisztráció beállítása
+      - name: Vállalati Android teljes mértékben felügyelt regisztrálása
         href: android-fully-managed-enroll.md
-      - name: Dedikált Android-eszközök vagy teljes körűen felügyelt eszközök regisztrálása
+      - name: Dedikált Vállalati Android-eszközök vagy teljes körűen felügyelt eszközök regisztrálása
         href: android-dedicated-devices-fully-managed-enroll.md
-      - name: Androidos munkahelyi profilos eszközök kezelése
+      - name: Vállalati androidos munkahelyi profilos eszközök kezelése
         href: android-enterprise-overview.md
       - name: Samsung Knox Mobile Enrollment
         href: android-samsung-knox-mobile-enroll.md
@@ -250,6 +250,8 @@ items:
       href: device-remote-lock.md
     - name: Jelszó alaphelyzetbe állítása
       href: device-passcode-reset.md
+    - name: Eszköz átnevezése
+      href: device-rename.md
     - name: Eszköz újraindítása
       href: device-restart.md
     - name: Aktuális felhasználó kijelentkeztetése
@@ -578,6 +580,8 @@ items:
             href: app-protection-policies-exception.md
         - name: Az alkalmazásvédelmi szabályzatok ellenőrzése
           href: app-protection-policies-validate.md
+        - name: Alkalmazásvédelmi szabályzat kézbesítése
+          href: app-protection-policy-delivery.md
         - name: Alkalmazásvédelmi felhasználó állapotának figyelése
           href: app-protection-policies-monitor.md
         - name: Felkészülés az alkalmazásvédelmi WIP-szabályzatokra
@@ -1001,9 +1005,9 @@ items:
       href: data-outside-protect.md
     - name: Adatszivárgás megakadályozása nem felügyelt eszközökön
       href: data-leak-prevention.md
-ms.openlocfilehash: d10d6c5a1c19430a0413e4f3149035a9e783dfc6
-ms.sourcegitcommit: f1681554ad842c22ad3f82f0e6d44d5966e4aa3d
+ms.openlocfilehash: 680ae510d7f3387b53ad6ae50c8e4d8ba194f8b9
+ms.sourcegitcommit: e5f501b396cb8743a8a9dea33381a16caadc51a9
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 02/21/2019
-ms.locfileid: "56458909"
+ms.lasthandoff: 02/23/2019
+ms.locfileid: "56742822"
