--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -7,7 +7,7 @@
       "build_output_subfolder": "intune",
       "locale": "hu-hu",
       "monikers": [],
-      "open_to_public_contributors": true,
+      "open_to_public_contributors": false,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
@@ -23,7 +23,7 @@
       "build_output_subfolder": "intune-azure-redir",
       "locale": "hu-hu",
       "monikers": [],
-      "open_to_public_contributors": true,
+      "open_to_public_contributors": false,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
@@ -39,7 +39,7 @@
       "build_output_subfolder": "intune-classic",
       "locale": "hu-hu",
       "monikers": [],
-      "open_to_public_contributors": true,
+      "open_to_public_contributors": false,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
@@ -55,7 +55,7 @@
       "build_output_subfolder": "intune-user-help",
       "locale": "hu-hu",
       "monikers": [],
-      "open_to_public_contributors": true,
+      "open_to_public_contributors": false,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
